app/assets/stylesheets/visualizations.css.scss
// Place all the styles related to the Visualisations controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http: //sass-lang.com/

// because displaying a vis is in the same div class as view all vises
body[data-page-name='visualizations/displayVis'] .visualizations-controller,
body[data-page-name='visualizations/show'] .visualizations-controller,
.embedded {

  // colors
  $border-color: #ABABAB;
  $border: thin solid $border-color;
  $dark-bkg: linear-gradient(#E4E4E4, #C4C4C4);
  $dark-bkg-inv: linear-gradient(#C4C4C4, #E4E4E4);
  $error: #F00;
  $error-hover: #C00;
  $hint: #888;
  $light-bkg: linear-gradient(#F6F6F6, #D7D7D7);
  $light-bkg-inv: linear-gradient(#D7D7D7, #F6F6F6);
  $panel-bkg: #e8e8e8;
  $regr-bkg: #ddd;
  $regr-dis-bkg: #eee;
  $regr-dis-font: #666;
  $select-bkg: linear-gradient(#49A7DB, #268AC1);
  $shadow-color: #9E9E9E;
  $shadow: 0 2px 3px 1px $shadow-color;

  // some stuff on the page (buttons mostly) shouldn't have selectable text
  @mixin unselectable {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }

  // Used in tool controls
  .clean_shrink {
    white-space: nowrap;
    overflow: hidden;
  }

  #controlcontainer {
    float: right;
    max-width: 20%;
    height: 100%;
  }

  #controlhider {
    float: left;
    display: inline-block;
    height: 100%;

    #control_hide_button { // eventually put this next to #fullscreen-viz?
      @include unselectable;
      background-image: $light-bkg;
      border: $border;
      border-radius: 3px;
      outline: none;
      margin: 10px 5px 5px;
      padding: 8px 6px;
    }
  }

  // this is where all the div controls get added
  #controldiv {
    width: 220px;
    height: 100%;
    float: right;
    overflow-x: hidden;
    overflow-y: auto;
    // This would be the correct place to add padding-right, but it break the
    // jquery animation for some reason, so we add it instead to
    // .ui-accordion-header

    // puts spacing between some boostrap buttons
    .form-control { // this styles bootstrap stuff and IS VERY BAD
      margin-bottom: 5px;
    }

    // any input button inside this class isn't lined up with the text to its right - this fixes that
    .inner_control_div {
      font-size: 12px;

      .checkbox, .radio {
        margin: 1px 0;
        input {
          margin-top: 2px;
        }
      }
    }

    .ui-accordion {
      margin: 10px 0 0; // add some space between accordions
    }

    .ui-accordion .ui-accordion-content {
      padding: 0.5em 0.5em;
      overflow-y: hidden;
    }

    .ui-accordion table td:first-child {
      padding-right: 5px; // adds some space between bootstrap buttons and their labels
    }

    #ui-accordion-groupControl-panel-0 {
      min-height: 120px; // fixed height fixes weird sizing bug in firefox
      max-height: 160px;
      overflow: auto;
    }

    .ui-accordion-header {
      @include unselectable;
      height: 38px;
      outline: none;
      margin: 0 5px 0 0; // see #controldiv above for explanation
      padding: 3px 0 7px 5px;
      border: thin solid #ABABAB;
      border-radius: 3px;
      background-image: $light-bkg;
    }

    // this is the little arrow button next to every accordion header
    .ui-accordion-header-icon {
      width: 11px;
      height: 11px;
      background-image: url(/assets/vis/ui-icons_222222_256x240.png);
      display: inline-block;
    }

    // the text on the dropdown header
    .ui-accordion-header a {
      padding-left: 10px;
      color: #222;
      font-size: 12pt;
    }

    // button for shrunken accordion dropdown
    .ui-icon-triangle-1-e { // can't figure out what e, s, or 1 stand for
      background-position: -34px -18px; // uses image @ (5, 2) on /assets/vis/ui-icons_222222_256x240.png
    }

    // button for expanded accordion dropdown
    .ui-icon-triangle-1-s {
      background-position: -67px -18px; // uses image @ (3, 2) on /assets/vis/ui-icons_222222_256x240.png
    }

    // because sliders need styling now that jQuery UI CSS is gone
    .ui-slider {
      position: relative;
      margin: 10px 5px;
      height: 10px;
      background-image: $light-bkg-inv;
      border: thin solid #ABABAB;
      border-radius: 3px;
    }

    .ui-slider-handle {
      display: inline-block;
      position: absolute;
      width: 16px;
      height: 16px;
      margin: -4px 0 0 -8px;
      border-radius: 8px;
      border: $border;
      background-image: $dark-bkg;
      outline: none;
    }

    .ui-slider-range {
      position: absolute;
      height: 8px;
      background-image: $select-bkg;
      border-radius: 3px;
    }
  }

  div.regressionTooltip {
    width: 100%;
    text-align: center;
    color: #000;
  }

  // button that enables fullscreen vis, not the fullscreen viz itself
  #fullscreen-viz {
    margin: 1px;
  }

  #heatmap-error-text {
    color: $error;
    white-space: normal;
  }

  .hint {
    margin-left: 40px;
    margin-bottom: 10px;
    margin-top: 10px;
    font-size: 90%;
    color: $hint;
  }

  .mainContent {
    width: 100%; // makes page body fill the screen instead of having a fixed width
  }

  // the display text for a disabled vis
  .novis_message {
    padding: 25px;
    text-align: center;
    font-size: 15pt;
    font-weight: bold;
    line-height: 25pt;
    color: $hint;
  }

  // photos sometimes needs a scrollbar
  #photos_canvas {
    overflow-y: auto;
  }

  #polaroid {

    div.p_item {
      font-size: 12px;
      border-radius: 5px;
      vertical-align: top;
      display: inline-block;
      word-wrap: break-word;
      overflow: hidden;
      zoom: 1;
      *display: inline;

      .caption_wrap {
         padding: 0px 10px 10px 10px;
         word-wrap: break-all;
         width: 95%;
         text-align: left;

         .caption {
           text-align: left;
         }
      }

      img {
        padding: 9px;
      }

      width: 200px !important;
      border: $border;
      margin-bottom: 10px;
      background-color: $panel-bkg;
      -moz-box-shadow: $shadow;
      -webkit-box-shadow: $shadow;
      box-shadow: $shadow;
    }
  }

  #radius-text {
    width: 75px;
    text-align:right;
  }

  #regression-table {

    #regression-table-body {
      text-align: left;
      font-size: 10px;
    }

    #regression-table-header {
      text-align: left;
      font-size: 12px;
    }

    .regression_row {
      border-bottom: $border;
      cursor: pointer;
    }

    .regression_row:hover {
      background-color: $regr-bkg;
      border-bottom: $border;
    }

    .regression_rowdata {
      border-bottom: $border;
    }

    .regression_row_disabled {
      background-color: regr-dis-bkg;
      color: $regr-dis-font;
    }

    .regression_remove {
      font-size: 14px;
      color: $error;
      width: 10%;
      text-align: center;
    }
  }

  .save_button {
    width: 160px;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  #summary_canvas {
    text-align:center;
    overflow-y: auto;
    overflow-x: hidden;
    padding: 0px 5px;

    .panel-heading {
      font-size:2em;
      font-weight:bold;
    }

    .panel-body {
      font-size:1.5em
    }
  }

  // table vis needs additional love to make it look right
  #table_canvas {

    #first_toolbar_bottom, #last_toolbar_bottom, #next_toolbar_bottom, #prev_toolbar_bottom {
      background-image: url(/assets/vis/ui-icons_222222_256x240.png);
      width: 19px; // height set as !important to 19px elsewhere
    }

    #first_toolbar_bottom {
      background-position: -78px -158px;
    }

    #last_toolbar_bottom {
      background-position: -63px -158px;
    }

    #next_toolbar_bottom {
      background-position: -30px -158px;
    }

    #prev_toolbar_bottom {
      background-position: -47px -158px;
    }

    table {
      border-color: $border-color;
    }

    // the entire header box
    .ui-jqgrid-hbox {
      background-image: $light-bkg;
      border-bottom: $border;
    }

    .ui-jqgrid-hbox table > thead > tr > th {
      border-top: none !important; // because inline styles (jQuery UI - can't fix)
      border-right: $border;
    }

    // The clear icon
    .ui-search-clear {
      a {
        color: $error;
      }
      a:hover {
        color: $error-hover;
      }
    }
  }

  // an active tab has a different looking gradient
  .ui-tabs-active {
    background-image: $dark-bkg-inv;
  }

  .vis_canvas {
    float: left;
    border-right: $border; // this makes it look like the control div has a border
    overflow: hidden; // because something inside vis_canvas is overflowing on every non-map vis
  }

  // just used for the border around the vis window
  #viscontainer {
    width: 100%;
    height: 98%;
    font-size:14px;
    min-height:500px;
    background-color: #FFF; // firefox - control menu turns black otherwise
    border: $border;
  }

  .vis_controls {
    float: right;
    width:100%;
  }

  #vis-disabled {
    overflow: none;
  }

  // the bar at the top of the vis window
  #visTabList {
    background-image: $light-bkg;
    border-bottom: $border; // puts a border only on the bottom of the tab list, #viscontainer does top and sides
    padding: 0; // removes padding that shouldn't be there to begin with
    margin: 0;
  }

  // an individual tab
  .vis_tab {
    @include unselectable;
    display: inline-block;
    font-size:1.2em;
    border-right: $border; // borders are only on the right - tab list and vis window cover the other sides

    .ui-tabs-anchor {
      display: block; // so vertical padding works
      padding: 6px 10px; // so the entire box is clickable
      color: #222;
      outline: none;
    }
  }
}

// the dropdown menu for the table vis is located as a direct child of the body, so this has to go here
ul#sopt_menu {
  background-color: #FFF;
  margin: 0;
  padding: 0;

  // display mode is required for list items to be displayed with proper margins and padding
  li {
    display: block;
    margin: 0;
    padding: 5px;
    border-left: thin solid #ABABAB;
    border-bottom: thin solid #ABABAB;
    border-right: thin solid #ABABAB;
  }

  // when a box is chosen or hovered over
  li:hover, li.ui-state-highlight {
    background-image: linear-gradient(#49A7DB, #268AC1);
    a > table > tbody > tr > td { // this is gross
      color: #FFF;
    }
  }
}

body[data-page-name='visualizations/displayVis'] .visualizations-controller,
body[data-page-name='visualizations/show'] .visualizations-controller {
  .ui-accordion-header {
    padding-top: 3px;
  }
}

.embedded {
  .ui-accordion-header {
    padding-top: 10px;
  }
}

.visualizations-controller {
  #searchVisRow {
    margin-bottom: 12px;
  }
}

